# librarian

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  changelog.md  pyproject.toml  roadmap.md  software-toolkit-curation.md
claude-skills/asi-librarian/: SKILL.md
claude-skills/rag-librarian/: SKILL.md
crates/adapter-cache-fs/: Cargo.toml
crates/adapter-cache-fs/src/: cache.rs  error.rs  lib.rs
crates/adapter-cache-fs/tests/: persistence.rs
crates/adapter-cache-mem/: Cargo.toml
crates/adapter-cache-mem/src/: lib.rs
crates/adapter-chunker-blankline/: Cargo.toml
crates/adapter-chunker-blankline/src/: lib.rs
crates/adapter-chunker-code/: Cargo.toml
crates/adapter-chunker-code/src/: chunker.rs  error.rs  lib.rs  (+1 more)
crates/adapter-chunker-recursive/: Cargo.toml
crates/adapter-chunker-recursive/src/: lib.rs  markdown.rs  recursive.rs
crates/adapter-chunker-recursive/tests/: chunker_integration.rs
crates/adapter-embedder-fallback/: Cargo.toml
crates/adapter-embedder-multimodal-stub/: Cargo.toml
crates/adapter-embedder-openai/: Cargo.toml
crates/adapter-embedder-openai/src/: classify.rs  config.rs  embedder.rs  error.rs  lib.rs
crates/adapter-embedder-openai/tests/: http_behavior.rs
crates/adapter-embedder-stub/: Cargo.toml
crates/adapter-embedder-voyage/: Cargo.toml
crates/adapter-embedder-voyage/src/: classify.rs  config.rs  embedder.rs  error.rs  lib.rs
crates/adapter-embedder-voyage/tests/: http_behavior.rs
crates/adapter-extractor-code/: Cargo.toml
crates/adapter-extractor-ebook/: Cargo.toml
crates/adapter-extractor-html/: Cargo.toml
crates/adapter-extractor-pdf/: Cargo.toml
crates/adapter-extractor-pdf/src/: error.rs  extractor.rs  lib.rs
crates/adapter-extractor-pdf/tests/: extracts_real_pdf.rs  pipeline_paper.rs  stub_marker.rs
crates/adapter-extractor-text/: Cargo.toml
crates/adapter-indexer-mem/: Cargo.toml
crates/adapter-indexer-qdrant/: Cargo.toml
crates/adapter-indexer-qdrant/src/: error.rs  indexer.rs  lib.rs  payload.rs  point_id.rs  search.rs  searcher.rs
crates/adapter-indexer-qdrant/tests/: figure_vectors.rs  named_vectors.rs  qdrant_integration.rs  searcher_integration.rs
crates/adapter-manifest-mem/: Cargo.toml
crates/adapter-manifest-sqlite/: Cargo.toml
crates/adapter-snapshotter-qdrant-nas/: Cargo.toml
crates/adapter-snapshotter-qdrant-nas/src/: error.rs  lib.rs  snapshotter.rs
crates/adapter-snapshotter-qdrant-nas/tests/: snapshot_qdrant.rs
crates/cli/: Cargo.toml
crates/cli/src/: client_config.rs  config.rs  docs.rs  fleet.rs  main.rs
crates/cli/src/commands/: audit.rs  extract.rs  health.rs  http.rs  ingest.rs  judge.rs  lifecycle.rs  mod.rs  output.rs  query.rs  remove.rs  snapshot.rs  status.rs
crates/cli/src/commands/add/: commit.rs  mod.rs  plan.rs  preview.rs  quality.rs  undo.rs
crates/cli/tests/: add_commit.rs  cli_integration.rs  fleet_integration.rs  health_e2e.rs  judge_e2e.rs  query_integration.rs  v1_acceptance.rs  v1_e2e.rs
crates/librarian-domain/: Cargo.toml
crates/librarian-domain/src/: adapter_identity.rs  cache.rs  chunk.rs  chunker.rs  content_type.rs  document.rs  embedder.rs  extractor.rs  ids.rs  indexer.rs  lib.rs  manifest.rs  payload.rs  provenance.rs  quality.rs  searcher.rs  snapshotter.rs  work.rs
crates/librarian-domain/tests/: cache_key.rs
crates/librarian-runner/: Cargo.toml
crates/librarian-runner/src/: batch.rs  lib.rs  pipeline.rs  snapshot.rs
crates/librarian-runner/tests/: chunker_change_cache.rs  end_to_end.rs  fallback_chain.rs  fault_boundary.rs  fault_boundary_qdrant.rs  idempotent_reingest.rs  idempotent_with_fs_cache.rs  quality_wiring.rs  update_and_remove.rs  update_and_remove_qdrant.rs
crates/markdown-cleaner/: Cargo.toml
crates/pipeline-e2e/: Cargo.toml
crates/pipeline-e2e/src/: main.rs
crates/pipeline-e2e/tests/: binary_e2e.rs
crates/query-core/: Cargo.toml
crates/query-core/src/: confidence.rs  error.rs  lib.rs  service.rs
crates/query-core/tests/: composition.rs
crates/query-daemon/: Cargo.toml
crates/query-daemon/src/: access_log.rs  auth.rs  config.rs  lib.rs  main.rs  test_support.rs
crates/query-daemon/tests/: concurrency.rs  e2e.rs  http.rs  http_qdrant.rs  http_real.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  server.rs  tools.rs
crates/server/tests/: mcp_integration.rs  mcp_smoke.rs
crates/walking-skeleton/: Cargo.toml
crates/walking-skeleton/src/: main.rs
crates/walking-skeleton/tests/: binary_e2e.rs  pipeline_with_real_qdrant.rs
docs/: HANDOFF.md  corpus-layout.md  quality-standard.md  requirements.md  retrieval-playbook.md
docs/adr/: 0001-metadata-model.md  0002-architectural-patterns.md  0003-language-choice-rust.md  0004-hexagonal-architecture.md  0005-query-service.md  0006-ingest-quality.md  0007-relative-source-id-and-corpus-layout.md
docs/diagrams/: 01-context.md  02-module-l1.md  03-runtime-l1.md  04-deployment-l1.md  05-pipeline-ports.puml  06-query-service.md
docs/issues/: 000-roadmap.md  001-domain-skeleton.md  002-walking-skeleton.md  003-fs-cache.md  004-sqlite-manifest.md  005-qdrant-indexer.md  006-fault-boundary.md  007-idempotent-reingest.md  008-update-and-remove.md  009-pdf-extractor.md  010-openai-embedder.md  011-fallback-chain.md  012-cli.md  013-mcp-server.md  014-snapshotter.md  015-supervisor.md  016-code-adapters.md  017-multimodal.md  018-full-ingestions.md  019-run-books-corpus.md  020-runner-dual-vector.md  021-run-particle-physics.md  022-figures.md  023-real-nas-push.md  024-mcp-tcp.md  025-ci.md
docs/runbooks/: colleague-access.md  query-daemon.md  v1-ingestion.md
eval/: golden.json  run_eval.py
experiments/: usage_experiments.py  usage_experiments_v2.py
experiments/chunking/: RESULTS.md  chunk_eval.py  gen_golden.py  golden_answers.json  golden_sample.json  golden_vectors.json  judge_eval.py  sweep.py
experiments/quality/: inspect_cache.py  qsig.py  run_experiments.py  run_more.py
experiments/telemetry/: tele_exp1.py
skills/asi-librarian/: SKILL.md
skills/librarian/: SKILL.md
tests/fixtures/: sample.txt
(+145 files in other folders)
