[workspace]
resolver = "2"
members = [
    "crates/librarian-domain",
    "crates/librarian-runner",
    "crates/adapter-cache-mem",
    "crates/adapter-cache-fs",
    "crates/adapter-manifest-mem",
    "crates/adapter-manifest-sqlite",
    "crates/adapter-indexer-mem",
    "crates/adapter-indexer-qdrant",
    "crates/adapter-snapshotter-qdrant-nas",
    "crates/adapter-extractor-text",
    "crates/adapter-extractor-pdf",
    "crates/adapter-extractor-ebook",
    "crates/adapter-extractor-html",
    "crates/adapter-extractor-code",
    "crates/adapter-chunker-code",
    "crates/markdown-cleaner",
    "crates/adapter-embedder-voyage",
    "crates/adapter-embedder-multimodal-stub",
    "crates/adapter-chunker-blankline",
    "crates/adapter-embedder-stub",
    "crates/adapter-embedder-openai",
    "crates/adapter-embedder-fallback",
    "crates/pipeline-e2e",
    "crates/cli",
    "crates/server",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
librarian-domain = { path = "crates/librarian-domain" }
librarian-runner = { path = "crates/librarian-runner" }
adapter-cache-mem = { path = "crates/adapter-cache-mem" }
adapter-cache-fs = { path = "crates/adapter-cache-fs" }
adapter-manifest-mem = { path = "crates/adapter-manifest-mem" }
adapter-manifest-sqlite = { path = "crates/adapter-manifest-sqlite" }
adapter-indexer-mem = { path = "crates/adapter-indexer-mem" }
adapter-indexer-qdrant = { path = "crates/adapter-indexer-qdrant" }
adapter-snapshotter-qdrant-nas = { path = "crates/adapter-snapshotter-qdrant-nas" }
adapter-extractor-text = { path = "crates/adapter-extractor-text" }
adapter-extractor-pdf = { path = "crates/adapter-extractor-pdf" }
adapter-extractor-ebook = { path = "crates/adapter-extractor-ebook" }
adapter-extractor-html = { path = "crates/adapter-extractor-html" }
adapter-extractor-code = { path = "crates/adapter-extractor-code" }
adapter-chunker-code = { path = "crates/adapter-chunker-code" }
markdown-cleaner = { path = "crates/markdown-cleaner" }
adapter-embedder-voyage = { path = "crates/adapter-embedder-voyage" }
adapter-embedder-multimodal-stub = { path = "crates/adapter-embedder-multimodal-stub" }
adapter-chunker-blankline = { path = "crates/adapter-chunker-blankline" }
adapter-embedder-stub = { path = "crates/adapter-embedder-stub" }
adapter-embedder-openai = { path = "crates/adapter-embedder-openai" }
adapter-embedder-fallback = { path = "crates/adapter-embedder-fallback" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
qdrant-client = "1.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v5"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
mockito = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
walkdir = "2"
libc = "0.2"
regex = "1"
once_cell = "1"
