[project]
name = "librarian"
version = "0.0.1"
description = "Build queryable Qdrant-backed collections from heterogeneous source material (books, papers, code, multimodal)."
requires-python = ">=3.12"
authors = [{ name = "Ciaran Welsh" }]
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    # Concrete dependencies are added when the corresponding adapters land.
    # Keeping the core dependency-free preserves the hexagonal boundary.
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
librarian = "librarian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
