[package]
name = "adapter-chunker-recursive"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
librarian-domain.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
