[package]
name = "adapter-indexer-qdrant"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
librarian-domain.workspace = true
thiserror.workspace = true
qdrant-client.workspace = true
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
adapter-chunker-code.workspace = true
adapter-extractor-code.workspace = true
tempfile.workspace = true
