[package]
name = "adapter-indexer-qdrant"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
librarian-domain.workspace = true
thiserror.workspace = true
qdrant-client.workspace = true
tokio.workspace = true
tonic = "0.12" # for tonic::Code matching in map_err (transitive via qdrant-client)
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
adapter-chunker-code.workspace = true
adapter-extractor-code.workspace = true
adapter-embedder-multimodal-stub.workspace = true
tempfile.workspace = true
serde_json = "1"
