[package]
name = "adapter-snapshotter-qdrant-nas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
librarian-domain.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
adapter-indexer-qdrant.workspace = true
