[package]
name = "librarian-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
librarian-domain.workspace = true
librarian-runner.workspace = true
adapter-cache-fs.workspace = true
adapter-manifest-sqlite.workspace = true
adapter-indexer-qdrant.workspace = true
adapter-extractor-text.workspace = true
adapter-extractor-pdf.workspace = true
adapter-chunker-blankline.workspace = true
adapter-embedder-stub.workspace = true
adapter-embedder-openai.workspace = true
adapter-embedder-fallback.workspace = true
adapter-snapshotter-qdrant-nas.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
libc.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
adapter-indexer-qdrant.workspace = true
