[package]
name = "librarian-cli"
version = "1.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "librarian"
path = "src/main.rs"

[dependencies]
librarian-domain.workspace = true
librarian-runner.workspace = true
adapter-cache-fs.workspace = true
adapter-manifest-sqlite.workspace = true
adapter-indexer-qdrant.workspace = true
adapter-extractor-text.workspace = true
adapter-extractor-pdf.workspace = true
adapter-extractor-ebook.workspace = true
adapter-extractor-html.workspace = true
adapter-chunker-blankline.workspace = true
adapter-chunker-recursive.workspace = true
adapter-embedder-stub.workspace = true
adapter-embedder-openai.workspace = true
adapter-embedder-voyage.workspace = true
adapter-embedder-fallback.workspace = true
adapter-extractor-code.workspace = true
adapter-chunker-code.workspace = true
adapter-snapshotter-qdrant-nas.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
libc.workspace = true
serde_json.workspace = true
reqwest = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
mockito.workspace = true
adapter-indexer-qdrant.workspace = true
serde_json.workspace = true
query-daemon = { path = "../query-daemon", features = ["test-support"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
