[package]
name = "librarian-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json = "1"
