[package]
name = "librarian-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
librarian-domain.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
adapter-cache-mem.workspace = true
adapter-manifest-mem.workspace = true
adapter-indexer-mem.workspace = true
adapter-extractor-text.workspace = true
adapter-chunker-blankline.workspace = true
adapter-embedder-stub.workspace = true
adapter-indexer-qdrant.workspace = true
adapter-cache-fs.workspace = true
tempfile.workspace = true
adapter-embedder-fallback.workspace = true
