[package]
name = "librarian-server"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "librarian-collection"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
reqwest = { workspace = true }

[dev-dependencies]
query-daemon = { path = "../query-daemon", features = ["test-support"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tempfile.workspace = true
